--- a/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddAnnotatedEntity-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddAnnotatedEntity-variables.yaml
@@ -1,5 +1,5 @@
 ---
 COSMOS_TABLES_ENDPOINT_SUFFIX: cosmos.azure.com
-TABLES_COSMOS_ACCOUNT_NAME: chrisstablesprim
+TABLES_COSMOS_ACCOUNT_NAME: seankaneprim
 TABLES_PRIMARY_COSMOS_ACCOUNT_KEY: Kg==
-randomSeed: "1621634379"
+randomSeed: "1626385587"
