--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddBasicEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddBasicEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotableyqmlx8o7oa4ux"}'
+    body: '{"TableName":"gotablezp1d18k5xiawn"}'
     form: {}
     headers:
       Accept:
@@ -19,35 +19,35 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 15:54:47 GMT
+      - Thu, 15 Jul 2021 21:51:40 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotableyqmlx8o7oa4ux"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablezp1d18k5xiawn"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Wed, 14 Jul 2021 15:54:45 GMT
+      - Thu, 15 Jul 2021 21:51:39 GMT
       Location:
-      - https://seankaneprim.table.core.windows.net/Tables('gotableyqmlx8o7oa4ux')
+      - https://seankaneprim.table.core.windows.net/Tables('gotablezp1d18k5xiawn')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3aa4b7c8-5002-0058-50c8-78302a000000
+      - 2eb5e556-0002-008e-52c3-793ec3000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: '{"Bool":true,"Integer":10,"PartitionKey":"pk001","RowKey":"rk001","String":"abcdef","TimeStamp":"0001-01-01T00:00:00Z"}'
+    body: '{"Bool":true,"Integer":10,"PartitionKey":"pk001","RowKey":"rk001","String":"abcdef","Timestamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -66,10 +66,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 15:54:47 GMT
+      - Thu, 15 Jul 2021 21:51:40 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableyqmlx8o7oa4ux
+    url: https://seankaneprim.table.core.windows.net/gotablezp1d18k5xiawn
     method: POST
   response:
     body: ""
@@ -79,13 +79,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://seankaneprim.table.core.windows.net/gotableyqmlx8o7oa4ux(PartitionKey='pk001',RowKey='rk001')
+      - https://seankaneprim.table.core.windows.net/gotablezp1d18k5xiawn(PartitionKey='pk001',RowKey='rk001')
       Date:
-      - Wed, 14 Jul 2021 15:54:46 GMT
+      - Thu, 15 Jul 2021 21:51:39 GMT
       Etag:
-      - W/"datetime'2021-07-14T15%3A54%3A47.0308383Z'"
+      - W/"datetime'2021-07-15T21%3A51%3A39.9360235Z'"
       Location:
-      - https://seankaneprim.table.core.windows.net/gotableyqmlx8o7oa4ux(PartitionKey='pk001',RowKey='rk001')
+      - https://seankaneprim.table.core.windows.net/gotablezp1d18k5xiawn(PartitionKey='pk001',RowKey='rk001')
       Preference-Applied:
       - return-no-content
       Server:
@@ -93,7 +93,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3aa4b81a-5002-0058-1dc8-78302a000000
+      - 2eb5e589-0002-008e-02c3-793ec3000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -113,28 +113,28 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 15:54:47 GMT
+      - Thu, 15 Jul 2021 21:51:41 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableyqmlx8o7oa4ux(PartitionKey='pk001',RowKey='rk001')
+    url: https://seankaneprim.table.core.windows.net/gotablezp1d18k5xiawn(PartitionKey='pk001',RowKey='rk001')
     method: GET
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotableyqmlx8o7oa4ux/@Element","odata.etag":"W/\"datetime''2021-07-14T15%3A54%3A47.0308383Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-14T15:54:47.0308383Z","Bool":true,"Integer":10,"String":"abcdef","TimeStamp":"0001-01-01T00:00:00Z"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotablezp1d18k5xiawn/@Element","odata.etag":"W/\"datetime''2021-07-15T21%3A51%3A39.9360235Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-15T21:51:39.9360235Z","Bool":true,"Integer":10,"String":"abcdef"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Wed, 14 Jul 2021 15:54:46 GMT
+      - Thu, 15 Jul 2021 21:51:39 GMT
       Etag:
-      - W/"datetime'2021-07-14T15%3A54%3A47.0308383Z'"
+      - W/"datetime'2021-07-15T21%3A51%3A39.9360235Z'"
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3aa4b87b-5002-0058-79c8-78302a000000
+      - 2eb5e5b9-0002-008e-32c3-793ec3000000
       X-Ms-Version:
       - "2019-02-02"
     status: 200 OK
@@ -154,26 +154,26 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 15:54:47 GMT
+      - Thu, 15 Jul 2021 21:51:41 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableyqmlx8o7oa4ux()?%24filter=PartitionKey+eq+%27pk001%27
+    url: https://seankaneprim.table.core.windows.net/gotablezp1d18k5xiawn()?%24filter=PartitionKey+eq+%27pk001%27
     method: GET
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotableyqmlx8o7oa4ux","value":[{"odata.etag":"W/\"datetime''2021-07-14T15%3A54%3A47.0308383Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-14T15:54:47.0308383Z","Bool":true,"Integer":10,"String":"abcdef","TimeStamp":"0001-01-01T00:00:00Z"}]}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotablezp1d18k5xiawn","value":[{"odata.etag":"W/\"datetime''2021-07-15T21%3A51%3A39.9360235Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-15T21:51:39.9360235Z","Bool":true,"Integer":10,"String":"abcdef"}]}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Wed, 14 Jul 2021 15:54:46 GMT
+      - Thu, 15 Jul 2021 21:51:39 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3aa4b8e0-5002-0058-5cc8-78302a000000
+      - 2eb5e5f5-0002-008e-6ac3-793ec3000000
       X-Ms-Version:
       - "2019-02-02"
     status: 200 OK
@@ -191,10 +191,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 15:54:47 GMT
+      - Thu, 15 Jul 2021 21:51:41 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/Tables('gotableyqmlx8o7oa4ux')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotablezp1d18k5xiawn')
     method: DELETE
   response:
     body: ""
@@ -204,13 +204,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Wed, 14 Jul 2021 15:54:46 GMT
+      - Thu, 15 Jul 2021 21:51:39 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3aa4b935-5002-0058-2ec8-78302a000000
+      - 2eb5e617-0002-008e-0cc3-793ec3000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
