--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestQuerySimpleEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestQuerySimpleEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotableovv2lv7cw21y6"}'
+    body: '{"TableName":"gotablek9778z5927xtv"}'
     form: {}
     headers:
       Accept:
@@ -19,28 +19,28 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 19:44:01 GMT
+      - Thu, 15 Jul 2021 21:47:43 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotableovv2lv7cw21y6"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablek9778z5927xtv"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Wed, 14 Jul 2021 19:44:01 GMT
+      - Thu, 15 Jul 2021 21:47:42 GMT
       Location:
-      - https://seankaneprim.table.core.windows.net/Tables('gotableovv2lv7cw21y6')
+      - https://seankaneprim.table.core.windows.net/Tables('gotablek9778z5927xtv')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8ac38abd-d002-000b-4de8-78131e000000
+      - 32f1ec8a-7002-005f-0dc3-795c49000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
@@ -48,7 +48,7 @@ interactions:
     duration: ""
 - request:
     body: '{"Bool":true,"Integer":1,"PartitionKey":"partition","RowKey":"1","String":"some
-      string 1","TimeStamp":"0001-01-01T00:00:00Z"}'
+      string 1","Timestamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -67,10 +67,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 19:44:02 GMT
+      - Thu, 15 Jul 2021 21:47:44 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6
+    url: https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv
     method: POST
   response:
     body: ""
@@ -80,13 +80,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='1')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='1')
       Date:
-      - Wed, 14 Jul 2021 19:44:01 GMT
+      - Thu, 15 Jul 2021 21:47:42 GMT
       Etag:
-      - W/"datetime'2021-07-14T19%3A44%3A02.0656245Z'"
+      - W/"datetime'2021-07-15T21%3A47%3A43.1505573Z'"
       Location:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='1')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='1')
       Preference-Applied:
       - return-no-content
       Server:
@@ -94,7 +94,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8ac38af4-d002-000b-7ee8-78131e000000
+      - 32f1ecb5-7002-005f-34c3-795c49000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -102,7 +102,7 @@ interactions:
     duration: ""
 - request:
     body: '{"Bool":true,"Integer":2,"PartitionKey":"partition","RowKey":"2","String":"some
-      string 2","TimeStamp":"0001-01-01T00:00:00Z"}'
+      string 2","Timestamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -121,10 +121,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 19:44:02 GMT
+      - Thu, 15 Jul 2021 21:47:44 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6
+    url: https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv
     method: POST
   response:
     body: ""
@@ -134,13 +134,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='2')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='2')
       Date:
-      - Wed, 14 Jul 2021 19:44:01 GMT
+      - Thu, 15 Jul 2021 21:47:42 GMT
       Etag:
-      - W/"datetime'2021-07-14T19%3A44%3A02.204723Z'"
+      - W/"datetime'2021-07-15T21%3A47%3A43.2566321Z'"
       Location:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='2')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='2')
       Preference-Applied:
       - return-no-content
       Server:
@@ -148,7 +148,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8ac38b16-d002-000b-1ce8-78131e000000
+      - 32f1ecd8-7002-005f-52c3-795c49000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -156,7 +156,7 @@ interactions:
     duration: ""
 - request:
     body: '{"Bool":true,"Integer":3,"PartitionKey":"partition","RowKey":"3","String":"some
-      string 3","TimeStamp":"0001-01-01T00:00:00Z"}'
+      string 3","Timestamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -175,10 +175,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 19:44:02 GMT
+      - Thu, 15 Jul 2021 21:47:44 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6
+    url: https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv
     method: POST
   response:
     body: ""
@@ -188,13 +188,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='3')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='3')
       Date:
-      - Wed, 14 Jul 2021 19:44:01 GMT
+      - Thu, 15 Jul 2021 21:47:42 GMT
       Etag:
-      - W/"datetime'2021-07-14T19%3A44%3A02.318804Z'"
+      - W/"datetime'2021-07-15T21%3A47%3A43.3667092Z'"
       Location:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='3')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='3')
       Preference-Applied:
       - return-no-content
       Server:
@@ -202,7 +202,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8ac38b3b-d002-000b-3ce8-78131e000000
+      - 32f1ed05-7002-005f-7cc3-795c49000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -210,7 +210,7 @@ interactions:
     duration: ""
 - request:
     body: '{"Bool":true,"Integer":4,"PartitionKey":"partition","RowKey":"4","String":"some
-      string 4","TimeStamp":"0001-01-01T00:00:00Z"}'
+      string 4","Timestamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -229,10 +229,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 19:44:02 GMT
+      - Thu, 15 Jul 2021 21:47:44 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6
+    url: https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv
     method: POST
   response:
     body: ""
@@ -242,13 +242,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='4')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='4')
       Date:
-      - Wed, 14 Jul 2021 19:44:01 GMT
+      - Thu, 15 Jul 2021 21:47:42 GMT
       Etag:
-      - W/"datetime'2021-07-14T19%3A44%3A02.4639068Z'"
+      - W/"datetime'2021-07-15T21%3A47%3A43.48079Z'"
       Location:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='4')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='4')
       Preference-Applied:
       - return-no-content
       Server:
@@ -256,7 +256,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8ac38b60-d002-000b-5de8-78131e000000
+      - 32f1ed2e-7002-005f-23c3-795c49000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -264,7 +264,7 @@ interactions:
     duration: ""
 - request:
     body: '{"Bool":true,"Integer":5,"PartitionKey":"partition","RowKey":"5","String":"some
-      string 5","TimeStamp":"0001-01-01T00:00:00Z"}'
+      string 5","Timestamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -283,10 +283,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 19:44:03 GMT
+      - Thu, 15 Jul 2021 21:47:44 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6
+    url: https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv
     method: POST
   response:
     body: ""
@@ -296,13 +296,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='5')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='5')
       Date:
-      - Wed, 14 Jul 2021 19:44:01 GMT
+      - Thu, 15 Jul 2021 21:47:42 GMT
       Etag:
-      - W/"datetime'2021-07-14T19%3A44%3A02.5779882Z'"
+      - W/"datetime'2021-07-15T21%3A47%3A43.5858643Z'"
       Location:
-      - https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6(PartitionKey='partition',RowKey='5')
+      - https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv(PartitionKey='partition',RowKey='5')
       Preference-Applied:
       - return-no-content
       Server:
@@ -310,7 +310,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8ac38b7f-d002-000b-7ce8-78131e000000
+      - 32f1ed50-7002-005f-45c3-795c49000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -330,30 +330,30 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 19:44:03 GMT
+      - Thu, 15 Jul 2021 21:47:44 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableovv2lv7cw21y6()?%24filter=RowKey+lt+%275%27
+    url: https://seankaneprim.table.core.windows.net/gotablek9778z5927xtv()?%24filter=RowKey+lt+%275%27
     method: GET
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotableovv2lv7cw21y6","value":[{"odata.etag":"W/\"datetime''2021-07-14T19%3A44%3A02.0656245Z''\"","PartitionKey":"partition","RowKey":"1","Timestamp":"2021-07-14T19:44:02.0656245Z","Bool":true,"Integer":1,"String":"some
-      string 1","TimeStamp":"0001-01-01T00:00:00Z"},{"odata.etag":"W/\"datetime''2021-07-14T19%3A44%3A02.204723Z''\"","PartitionKey":"partition","RowKey":"2","Timestamp":"2021-07-14T19:44:02.204723Z","Bool":true,"Integer":2,"String":"some
-      string 2","TimeStamp":"0001-01-01T00:00:00Z"},{"odata.etag":"W/\"datetime''2021-07-14T19%3A44%3A02.318804Z''\"","PartitionKey":"partition","RowKey":"3","Timestamp":"2021-07-14T19:44:02.318804Z","Bool":true,"Integer":3,"String":"some
-      string 3","TimeStamp":"0001-01-01T00:00:00Z"},{"odata.etag":"W/\"datetime''2021-07-14T19%3A44%3A02.4639068Z''\"","PartitionKey":"partition","RowKey":"4","Timestamp":"2021-07-14T19:44:02.4639068Z","Bool":true,"Integer":4,"String":"some
-      string 4","TimeStamp":"0001-01-01T00:00:00Z"}]}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotablek9778z5927xtv","value":[{"odata.etag":"W/\"datetime''2021-07-15T21%3A47%3A43.1505573Z''\"","PartitionKey":"partition","RowKey":"1","Timestamp":"2021-07-15T21:47:43.1505573Z","Bool":true,"Integer":1,"String":"some
+      string 1"},{"odata.etag":"W/\"datetime''2021-07-15T21%3A47%3A43.2566321Z''\"","PartitionKey":"partition","RowKey":"2","Timestamp":"2021-07-15T21:47:43.2566321Z","Bool":true,"Integer":2,"String":"some
+      string 2"},{"odata.etag":"W/\"datetime''2021-07-15T21%3A47%3A43.3667092Z''\"","PartitionKey":"partition","RowKey":"3","Timestamp":"2021-07-15T21:47:43.3667092Z","Bool":true,"Integer":3,"String":"some
+      string 3"},{"odata.etag":"W/\"datetime''2021-07-15T21%3A47%3A43.48079Z''\"","PartitionKey":"partition","RowKey":"4","Timestamp":"2021-07-15T21:47:43.48079Z","Bool":true,"Integer":4,"String":"some
+      string 4"}]}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Wed, 14 Jul 2021 19:44:01 GMT
+      - Thu, 15 Jul 2021 21:47:43 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8ac38ba1-d002-000b-1ae8-78131e000000
+      - 32f1ed69-7002-005f-5ec3-795c49000000
       X-Ms-Version:
       - "2019-02-02"
     status: 200 OK
@@ -371,10 +371,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 19:44:03 GMT
+      - Thu, 15 Jul 2021 21:47:44 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/Tables('gotableovv2lv7cw21y6')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotablek9778z5927xtv')
     method: DELETE
   response:
     body: ""
@@ -384,13 +384,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Wed, 14 Jul 2021 19:44:01 GMT
+      - Thu, 15 Jul 2021 21:47:43 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8ac38bc3-d002-000b-3ae8-78131e000000
+      - 32f1ed9c-7002-005f-11c3-795c49000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
